--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,14 +17,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:contentDescription="TODO"
-            app:srcCompat="@drawable/logo_dummy_restock"
-            tools:ignore="ContentDescription,HardcodedText" />
-
         <android.support.design.widget.TextInputLayout
             android:id="@+id/loginActivityTextInputLayoutEmail"
             android:layout_width="match_parent"
@@ -57,14 +49,11 @@
 
         <Button
             android:id="@+id/loginActivityLoginButton"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            style="@style/ColorButtonRipple"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="@drawable/ripple_button"
-            android:elevation="2dp"
-            android:text="@string/activity_login_login_button"
-            android:textColor="@color/primaryTextColor" />
+            android:text="@string/activity_login_login_button" />
 
         <TextView
             android:id="@+id/textView3"
@@ -74,23 +63,48 @@
             android:gravity="center_horizontal"
             android:text="OR" />
 
-        <com.facebook.login.widget.LoginButton
-            android:id="@+id/login_button_facebook"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            android:elevation="2dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="vertical"
+            android:padding="4dp">
+
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/login_button_facebook"
+                style="@style/FacebookLoginButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:elevation="2dp"
+                android:gravity="center"
+                android:paddingBottom="12dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="12dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="vertical">
+
+            <com.shobhitpuri.custombuttons.GoogleSignInButton
+                android:id="@+id/login_button_google2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:text="Continue with Google"
+                app:isDarkTheme="false" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/loginActivitySignUpButton"
-            style="@style/Widget.AppCompat.Button.Borderless"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
-            android:background="@android:color/transparent"
-            android:elevation="2dp"
+            android:elevation="0dp"
             android:text="@string/login_activity_signup_button"
             android:textColor="@color/primaryLightColor"
             android:textSize="12sp" />
