--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -58,5 +58,13 @@
             android:text="@string/activity_sign_up_signup_button"
             android:textColor="@color/primaryTextColor" />
 
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/sign_up_button_facebook"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:elevation="2dp" />
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
