Adapter de producto modificado, seguimiento de sesión agregado, arreglo de facebook login, información ya traida de base de datos, consumo de imagen mediante piccaso.

--- a/app/src/main/res/layout/recyclerview_main_item.xml
+++ b/app/src/main/res/layout/recyclerview_main_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/primaryColor"
+    android:background="@color/primaryTextColor"
     android:orientation="vertical"
     android:padding="50dp">
 
@@ -14,12 +15,12 @@
         android:layout_weight="1"
         android:gravity="center_horizontal"
         android:text="TextView"
-        android:textColor="@color/primaryTextColor" />
+        android:textColor="@color/text_color_dark" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_weight="1"
-        app:srcCompat="@color/primaryLightColor" />
+        app:srcCompat="@color/secondaryColor" />
 </LinearLayout>
