--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,13 +18,13 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/loginActivityTextInputLayoutEmail"
+            android:id="@+id/text_input_layout_login_activity_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/loginActivityTextInputEditEmail"
+                android:id="@+id/text_input_edit_login_activity_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/activity_login_email_hint"
@@ -33,13 +33,13 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/loginActivityTextInputLayoutPassword"
+            android:id="@+id/text_input_layout_login_activity_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/loginActivityTextInputEditPassword"
+                android:id="@+id/text_input_edit_login_activity_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/activity_login_password_hint"
@@ -48,7 +48,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <Button
-            android:id="@+id/loginActivityLoginButton"
+            android:id="@+id/button_login_activity_login"
             style="@style/ColorButtonRipple"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:gravity="center_horizontal"
-            android:text="OR" />
+            android:text="@string/msg_activity_login_or" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -98,7 +98,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/loginActivitySignUpButton"
+            android:id="@+id/button_login_activity_sign_up"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
