Dialog y cargada de imagenes para productos agregados, activities agregadas para la nav var, iconos y recursos

--- a/app/src/main/res/layout/recyclerview_product_item.xml
+++ b/app/src/main/res/layout/recyclerview_product_item.xml
@@ -20,7 +20,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/ProductItemImage"
+                android:id="@+id/image_product_item"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/nav_header_height"
                 app:srcCompat="@drawable/side_nav_bar" />
