--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -7,33 +7,32 @@
     android:background="@color/primaryColor"
     tools:context=".LandingActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/button_landing_activity_sign_in"
+        style="@style/ColorButtonRipple"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/activity_login_login_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_landing_activity_sign_up"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button_landing_activity_sign_up"
+        style="@style/FlatButtonRipple"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
-        android:orientation="horizontal"
+        android:text="@string/activity_sign_up_signup_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button_landing_activity_sign_in" />
 
-        <Button
-            android:id="@+id/button_landing_activity_sign_in"
-            style="@style/ColorButtonRipple"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_weight="1"
-            android:text="@string/activity_login_login_button" />
-
-        <Button
-            android:id="@+id/button_landing_activity_sign_up"
-            style="@style/FlatButtonRipple"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_weight="1"
-            android:text="@string/activity_sign_up_signup_button" />
-    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
