--- a/app/src/main/res/layout/fragment_product_dialog.xml
+++ b/app/src/main/res/layout/fragment_product_dialog.xml
@@ -44,12 +44,12 @@
             android:layout_marginEnd="16dp"
             android:layout_marginTop="8dp"
             android:src="@mipmap/ic_launcher"
-            app:layout_constraintBottom_toTopOf="@+id/cardView1"
+            app:layout_constraintBottom_toTopOf="@+id/card_actual_location"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <android.support.v7.widget.CardView
-            android:id="@+id/cardView1"
+            android:id="@+id/card_actual_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -68,13 +68,13 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:id="@+id/cardView2"
+            android:id="@+id/card_selected_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView1">
+            app:layout_constraintTop_toBottomOf="@+id/card_actual_location">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -93,7 +93,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cardView1" />
+                    app:layout_constraintTop_toBottomOf="@+id/card_actual_location" />
 
                 <TextView
                     android:id="@+id/text_view_description_fragment_product"
@@ -115,7 +115,7 @@
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView2">
+            app:layout_constraintTop_toBottomOf="@+id/card_selected_location">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -132,7 +132,7 @@
                     android:textColor="#212121"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+                    app:layout_constraintTop_toBottomOf="@+id/card_selected_location" />
 
                 <TextView
                     android:id="@+id/text_view_goes_fragment_product"
