--- a/app/src/main/res/layout/activity_map_order.xml
+++ b/app/src/main/res/layout/activity_map_order.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView"
+        android:id="@+id/mapView_order"
         android:layout_width="0dp"
         android:layout_height="0dp"
         map:layout_constraintBottom_toBottomOf="parent"
@@ -22,6 +22,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:padding="8dp"
+        map:cardCornerRadius="2dp"
         map:layout_constraintBottom_toTopOf="@+id/card_selected_location"
         map:layout_constraintEnd_toEndOf="parent"
         map:layout_constraintHorizontal_bias="0.0"
@@ -33,11 +34,12 @@
 
             <ImageButton
                 android:id="@+id/imageButton3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:background="@drawable/ic_circle"
                 android:backgroundTint="@color/primaryLightColor"
                 android:src="@drawable/ic_actual_location"
                 map:layout_constraintBottom_toBottomOf="parent"
@@ -70,6 +72,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:padding="8dp"
+        map:cardCornerRadius="2dp"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
         map:layout_constraintStart_toStartOf="parent">
@@ -80,11 +83,12 @@
 
             <ImageButton
                 android:id="@+id/imageButton4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:background="@drawable/ic_circle"
                 android:backgroundTint="@color/primaryLightColor"
                 android:src="@drawable/ic_place"
                 map:layout_constraintBottom_toBottomOf="parent"
