--- a/app/src/main/res/layout/activity_map_order.xml
+++ b/app/src/main/res/layout/activity_map_order.xml
@@ -53,7 +53,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Use actual location"
+                android:text="@string/activity_map_order_current_location"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 map:layout_constraintBottom_toBottomOf="parent"
@@ -102,7 +102,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Use location on map"
+                android:text="@string/activity_map_order_map_location"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 map:layout_constraintBottom_toBottomOf="parent"
