--- a/app/src/main/res/layout/recyclerview_history_item.xml
+++ b/app/src/main/res/layout/recyclerview_history_item.xml
@@ -30,7 +30,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
-            android:text="Detail"
+            android:text="@string/recyclerview_history_item_detail"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
