--- a/app/src/main/res/layout/recyclerview_product_item.xml
+++ b/app/src/main/res/layout/recyclerview_product_item.xml
@@ -162,7 +162,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
-            android:text="More"
+            android:text="MORE "
             android:textColor="@color/primaryLightColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
